deploy/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: annapolis-deployment
  labels:
    app: annapolis
spec:
  replicas: 3
  selector:
    matchLabels:
      app: annapolis
  template:
    metadata:
      labels:
        app: annapolis
    spec:
      containers:
        - name: annapolis
          image: annapolis:0.1.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: annapolis-service
spec:
  selector:
    app: annapolis
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
